backport overhauled DynamicPackResources